fix(style): content overflow issue

--- a/documentation/style.css
+++ b/documentation/style.css
@@ -17,6 +17,7 @@ body {
 	color: var(--black);
 	font-family: "Inter", sans-serif;
 	background-color: var(--background-color);
+	overflow-x: hidden;
 }
 
 code {
